NIFI-12125 Refactored Framework SSLContext Loading
- Added Framework SSLContext Provider for centralized loading
- Refactored Spring Framework XML to Java Configuration
- Removed Jetty StoreScanner